Added credits page for credit to user who provided sounds and finished up Alerts before going to next intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         <activity android:name=".simon_extreme"/>
         <activity android:name=".simon_rewind"/>
         <activity android:name=".simon_surprise"/>
-        <activity android:name=".simon_classic"></activity>
+        <activity android:name=".simon_classic"/>
+        <activity android:name=".credits"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
